--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,114 +5,116 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 匈牙利-1.07MB/s(Youtube:不良林), server: 185.225.69.134, port: 45081, type: vmess, uuid: 3c3bfd75-dc30-4e76-8940-47e1137e21f9, alterId: 64, cipher: auto, tls: false, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-4.01MB/s(Youtube:不良林), server: rn.uuuuuu.eu, port: 443, type: trojan, password: !<str> 888888, sni: rn.uuuuuu.eu, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-1.16MB/s(Youtube:不良林), server: ingress-i1.onebox6.org, port: 38701, type: vmess, uuid: 79386685-16da-327c-9e14-aa6d702d86bc, alterId: 1, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: ingress-i1.onebox6.org}}
-  - {name: 🇺🇸 美国-236.8KB/s(Youtube:不良林), server: AZQT001.xiba1.xyz, port: 20735, type: trojan, password: 93768960-75fc-34e5-8025-7ff0cc5a0aa6, sni: AZQT001.xiba1.xyz, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-711.8KB/s(Youtube:不良林), server: HJ001.xiba1.xyz, port: 20762, type: trojan, password: 93768960-75fc-34e5-8025-7ff0cc5a0aa6, sni: HJ001.xiba1.xyz, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-404.8KB/s(Youtube:不良林), server: sg-cn.teacher2050.com, port: 43508, type: trojan, password: E44523FE-B9E4-BD49-AEAF-DBABE701D016, sni: sg-cn.teacher2050.com, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-2.42MB/s(Youtube:不良林), server: 212.81.47.15, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-2.37MB/s(Youtube:不良林), server: 212.81.47.16, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-1.14MB/s(Youtube:不良林), server: 167.88.61.2, port: 801, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇺🇸 美国-1.86MB/s(Youtube:不良林), server: 167.88.61.2, port: 803, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇺🇸 美国-668.7KB/s(Youtube:不良林), server: AZQT001.xiba1.xyz, port: 20746, type: trojan, password: 93768960-75fc-34e5-8025-7ff0cc5a0aa6, sni: AZQT001.xiba1.xyz, skip-cert-verify: true}
+  - {name: 🇭🇰 香港-183.8KB/s(Youtube:不良林), server: AZHJ001.xiba1.xyz, port: 20723, type: trojan, password: 93768960-75fc-34e5-8025-7ff0cc5a0aa6, sni: AZHJ001.xiba1.xyz, skip-cert-verify: true}
+  - {name: 🇰🇷 韩国-281.3KB/s(Youtube:不良林), server: 52.231.75.156, port: 12580, type: trojan, password: 1c994b60-3574-4135-81c7-84187668b30f, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-206.8KB/s(Youtube:不良林), server: AZQT001.xiba1.xyz, port: 20740, type: trojan, password: 93768960-75fc-34e5-8025-7ff0cc5a0aa6, sni: AZQT001.xiba1.xyz, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-667.0KB/s(Youtube:不良林), server: 51.81.223.19, port: 443, type: vmess, uuid: c0156451-4efb-45e2-84fc-8d315c4650db, alterId: 32, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-4.74MB/s(Youtube:不良林), server: 180.163.62.91, port: 10065, type: ss, cipher: aes-128-cfb, password: QazEdcTgb159@$*}
+  - {name: 🇨🇳 中国-3.32MB/s(Youtube:不良林), server: gycd1.csccdd.xyz, port: 52340, type: vmess, uuid: 1dc13504-e4ba-3c49-8e0b-6a3eb4e40335, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /index, ws-headers: {Host: gycd1.csccdd.xyz}}
+  - {name: 🇫🇷 法国-1.39MB/s(Youtube:不良林), server: 54.37.192.112, port: 443, type: vmess, uuid: 9f58234c-355b-4065-ae21-d4a63099aba5, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /path/120208301422, ws-headers: {Host: 54.37.192.112}}
+  - {name: 🇺🇸 美国-2.87MB/s(Youtube:不良林), server: 212.81.47.12, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, skip-cert-verify: true}
+  - {name: 🇭🇰 香港-397.8KB/s(Youtube:不良林), server: AZHJ001.xiba1.xyz, port: 20722, type: trojan, password: 93768960-75fc-34e5-8025-7ff0cc5a0aa6, sni: AZHJ001.xiba1.xyz, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 匈牙利-1.07MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.01MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.16MB/s(Youtube:不良林)
-      - 🇺🇸 美国-236.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-711.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-404.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.42MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.37MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.14MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.86MB/s(Youtube:不良林)
+      - 🇺🇸 美国-668.7KB/s(Youtube:不良林)
+      - 🇭🇰 香港-183.8KB/s(Youtube:不良林)
+      - 🇰🇷 韩国-281.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-206.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-667.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.74MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.32MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.39MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.87MB/s(Youtube:不良林)
+      - 🇭🇰 香港-397.8KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 匈牙利-1.07MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.01MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.16MB/s(Youtube:不良林)
-      - 🇺🇸 美国-236.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-711.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-404.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.42MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.37MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.14MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.86MB/s(Youtube:不良林)
+      - 🇺🇸 美国-668.7KB/s(Youtube:不良林)
+      - 🇭🇰 香港-183.8KB/s(Youtube:不良林)
+      - 🇰🇷 韩国-281.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-206.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-667.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.74MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.32MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.39MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.87MB/s(Youtube:不良林)
+      - 🇭🇰 香港-397.8KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 匈牙利-1.07MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.01MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.16MB/s(Youtube:不良林)
-      - 🇺🇸 美国-236.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-711.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-404.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.42MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.37MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.14MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.86MB/s(Youtube:不良林)
+      - 🇺🇸 美国-668.7KB/s(Youtube:不良林)
+      - 🇭🇰 香港-183.8KB/s(Youtube:不良林)
+      - 🇰🇷 韩国-281.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-206.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-667.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.74MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.32MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.39MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.87MB/s(Youtube:不良林)
+      - 🇭🇰 香港-397.8KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
+      - 🇭🇰 香港-183.8KB/s(Youtube:不良林)
+      - 🇭🇰 香港-397.8KB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 匈牙利-1.07MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.01MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.16MB/s(Youtube:不良林)
-      - 🇺🇸 美国-236.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-711.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-404.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.42MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.37MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.14MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.86MB/s(Youtube:不良林)
+      - 🇺🇸 美国-668.7KB/s(Youtube:不良林)
+      - 🇭🇰 香港-183.8KB/s(Youtube:不良林)
+      - 🇰🇷 韩国-281.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-206.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-667.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.74MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.32MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.39MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.87MB/s(Youtube:不良林)
+      - 🇭🇰 香港-397.8KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 匈牙利-1.07MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.01MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.16MB/s(Youtube:不良林)
-      - 🇺🇸 美国-236.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-711.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-404.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.42MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.37MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.14MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.86MB/s(Youtube:不良林)
+      - 🇺🇸 美国-668.7KB/s(Youtube:不良林)
+      - 🇭🇰 香港-183.8KB/s(Youtube:不良林)
+      - 🇰🇷 韩国-281.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-206.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-667.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.74MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.32MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.39MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.87MB/s(Youtube:不良林)
+      - 🇭🇰 香港-397.8KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 匈牙利-1.07MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.01MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.16MB/s(Youtube:不良林)
-      - 🇺🇸 美国-236.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-711.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-404.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.42MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.37MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.14MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.86MB/s(Youtube:不良林)
+      - 🇺🇸 美国-668.7KB/s(Youtube:不良林)
+      - 🇭🇰 香港-183.8KB/s(Youtube:不良林)
+      - 🇰🇷 韩国-281.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-206.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-667.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.74MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.32MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.39MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.87MB/s(Youtube:不良林)
+      - 🇭🇰 香港-397.8KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +130,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 匈牙利-1.07MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.01MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.16MB/s(Youtube:不良林)
-      - 🇺🇸 美国-236.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-711.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-404.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.42MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.37MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.14MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.86MB/s(Youtube:不良林)
+      - 🇺🇸 美国-668.7KB/s(Youtube:不良林)
+      - 🇭🇰 香港-183.8KB/s(Youtube:不良林)
+      - 🇰🇷 韩国-281.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-206.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-667.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.74MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.32MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.39MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.87MB/s(Youtube:不良林)
+      - 🇭🇰 香港-397.8KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
