--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,11 +5,11 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇭🇰 香港-204.5KB/s(Youtube:不良林), server: AZHJ001.xiba1.xyz, port: 20723, type: trojan, password: 93768960-75fc-34e5-8025-7ff0cc5a0aa6, sni: AZHJ001.xiba1.xyz, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-2.38MB/s(Youtube:不良林), server: sg-cn.teacher2050.com, port: 43508, type: trojan, password: E44523FE-B9E4-BD49-AEAF-DBABE701D016, sni: sg-cn.teacher2050.com, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-259.1KB/s(Youtube:不良林), server: AZQT001.xiba1.xyz, port: 20731, type: trojan, password: 93768960-75fc-34e5-8025-7ff0cc5a0aa6, sni: AZQT001.xiba1.xyz, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-363.6KB/s(Youtube:不良林), server: 180.163.62.91, port: 10065, type: ss, cipher: aes-128-cfb, password: QazEdcTgb159@$*}
-  - {name: 🇰🇷 韩国-529.2KB/s(Youtube:不良林), server: 52.231.75.156, port: 12580, type: trojan, password: 1c994b60-3574-4135-81c7-84187668b30f, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-440.6KB/s(Youtube:不良林), server: ingress-i1.onebox6.org, port: 38701, type: vmess, uuid: 79386685-16da-327c-9e14-aa6d702d86bc, alterId: 1, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: ingress-i1.onebox6.org}}
+  - {name: 🇺🇸 美国-2.87MB/s(Youtube:不良林), server: 212.81.47.12, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, skip-cert-verify: true}
+  - {name: 🇭🇰 香港-9.63MB/s(Youtube:不良林), server: hk-5.netflixssr.com, port: 644, type: vmess, uuid: 3107fc75-f61d-30aa-85b0-2b9861cfd485, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /api/v1/stream, ws-headers: {Host: hk-5.netflixssr.com}}
+  - {name: 🇫🇷 法国-1.39MB/s(Youtube:不良林), server: 54.37.192.112, port: 443, type: vmess, uuid: 9f58234c-355b-4065-ae21-d4a63099aba5, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /path/120208301422, ws-headers: {Host: 54.37.192.112}}
+  - {name: 🇺🇸 美国-1.14MB/s(Youtube:不良林), server: 167.88.61.2, port: 801, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
   - {name: 🇺🇸 美国-434.5KB/s(Youtube:不良林), server: AZQT001.xiba1.xyz, port: 20730, type: trojan, password: 93768960-75fc-34e5-8025-7ff0cc5a0aa6, sni: AZQT001.xiba1.xyz, skip-cert-verify: true}
   - {name: 🇺🇸 美国-789.9KB/s(Youtube:不良林), server: AZQT001.xiba1.xyz, port: 20739, type: trojan, password: 93768960-75fc-34e5-8025-7ff0cc5a0aa6, sni: AZQT001.xiba1.xyz, skip-cert-verify: true}
   - {name: 🇺🇸 美国-539.3KB/s(Youtube:不良林), server: AZQT001.xiba1.xyz, port: 20735, type: trojan, password: 93768960-75fc-34e5-8025-7ff0cc5a0aa6, sni: AZQT001.xiba1.xyz, skip-cert-verify: true}
@@ -21,11 +21,11 @@ proxy-groups:
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇭🇰 香港-204.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.38MB/s(Youtube:不良林)
-      - 🇺🇸 美国-259.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-363.6KB/s(Youtube:不良林)
-      - 🇰🇷 韩国-529.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-440.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.87MB/s(Youtube:不良林)
+      - 🇭🇰 香港-9.63MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.39MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.14MB/s(Youtube:不良林)
       - 🇺🇸 美国-434.5KB/s(Youtube:不良林)
       - 🇺🇸 美国-789.9KB/s(Youtube:不良林)
       - 🇺🇸 美国-539.3KB/s(Youtube:不良林)
@@ -36,11 +36,11 @@ proxy-groups:
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇭🇰 香港-204.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.38MB/s(Youtube:不良林)
-      - 🇺🇸 美国-259.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-363.6KB/s(Youtube:不良林)
-      - 🇰🇷 韩国-529.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-440.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.87MB/s(Youtube:不良林)
+      - 🇭🇰 香港-9.63MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.39MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.14MB/s(Youtube:不良林)
       - 🇺🇸 美国-434.5KB/s(Youtube:不良林)
       - 🇺🇸 美国-789.9KB/s(Youtube:不良林)
       - 🇺🇸 美国-539.3KB/s(Youtube:不良林)
@@ -52,11 +52,11 @@ proxy-groups:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇭🇰 香港-204.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.38MB/s(Youtube:不良林)
-      - 🇺🇸 美国-259.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-363.6KB/s(Youtube:不良林)
-      - 🇰🇷 韩国-529.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-440.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.87MB/s(Youtube:不良林)
+      - 🇭🇰 香港-9.63MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.39MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.14MB/s(Youtube:不良林)
       - 🇺🇸 美国-434.5KB/s(Youtube:不良林)
       - 🇺🇸 美国-789.9KB/s(Youtube:不良林)
       - 🇺🇸 美国-539.3KB/s(Youtube:不良林)
@@ -66,18 +66,18 @@ proxy-groups:
     type: select
     proxies:
       - 🎯 全球直连
-      - 🇭🇰 香港-204.5KB/s(Youtube:不良林)
+      - 🇭🇰 香港-9.63MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇭🇰 香港-204.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.38MB/s(Youtube:不良林)
-      - 🇺🇸 美国-259.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-363.6KB/s(Youtube:不良林)
-      - 🇰🇷 韩国-529.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-440.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.87MB/s(Youtube:不良林)
+      - 🇭🇰 香港-9.63MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.39MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.14MB/s(Youtube:不良林)
       - 🇺🇸 美国-434.5KB/s(Youtube:不良林)
       - 🇺🇸 美国-789.9KB/s(Youtube:不良林)
       - 🇺🇸 美国-539.3KB/s(Youtube:不良林)
@@ -88,11 +88,11 @@ proxy-groups:
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇭🇰 香港-204.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.38MB/s(Youtube:不良林)
-      - 🇺🇸 美国-259.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-363.6KB/s(Youtube:不良林)
-      - 🇰🇷 韩国-529.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-440.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.87MB/s(Youtube:不良林)
+      - 🇭🇰 香港-9.63MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.39MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.14MB/s(Youtube:不良林)
       - 🇺🇸 美国-434.5KB/s(Youtube:不良林)
       - 🇺🇸 美国-789.9KB/s(Youtube:不良林)
       - 🇺🇸 美国-539.3KB/s(Youtube:不良林)
@@ -104,11 +104,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇭🇰 香港-204.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.38MB/s(Youtube:不良林)
-      - 🇺🇸 美国-259.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-363.6KB/s(Youtube:不良林)
-      - 🇰🇷 韩国-529.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-440.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.87MB/s(Youtube:不良林)
+      - 🇭🇰 香港-9.63MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.39MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.14MB/s(Youtube:不良林)
       - 🇺🇸 美国-434.5KB/s(Youtube:不良林)
       - 🇺🇸 美国-789.9KB/s(Youtube:不良林)
       - 🇺🇸 美国-539.3KB/s(Youtube:不良林)
@@ -129,11 +129,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇭🇰 香港-204.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.38MB/s(Youtube:不良林)
-      - 🇺🇸 美国-259.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-363.6KB/s(Youtube:不良林)
-      - 🇰🇷 韩国-529.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-440.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.87MB/s(Youtube:不良林)
+      - 🇭🇰 香港-9.63MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.39MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.14MB/s(Youtube:不良林)
       - 🇺🇸 美国-434.5KB/s(Youtube:不良林)
       - 🇺🇸 美国-789.9KB/s(Youtube:不良林)
       - 🇺🇸 美国-539.3KB/s(Youtube:不良林)
