--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,115 +5,116 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-440.6KB/s(Youtube:不良林), server: ingress-i1.onebox6.org, port: 38701, type: vmess, uuid: 79386685-16da-327c-9e14-aa6d702d86bc, alterId: 1, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: ingress-i1.onebox6.org}}
-  - {name: 🇺🇸 美国-2.87MB/s(Youtube:不良林), server: 212.81.47.12, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, skip-cert-verify: true}
-  - {name: 🇭🇰 香港-9.63MB/s(Youtube:不良林), server: hk-5.netflixssr.com, port: 644, type: vmess, uuid: 3107fc75-f61d-30aa-85b0-2b9861cfd485, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /api/v1/stream, ws-headers: {Host: hk-5.netflixssr.com}}
-  - {name: 🇫🇷 法国-1.39MB/s(Youtube:不良林), server: 54.37.192.112, port: 443, type: vmess, uuid: 9f58234c-355b-4065-ae21-d4a63099aba5, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /path/120208301422, ws-headers: {Host: 54.37.192.112}}
-  - {name: 🇺🇸 美国-1.14MB/s(Youtube:不良林), server: 167.88.61.2, port: 801, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇺🇸 美国-434.5KB/s(Youtube:不良林), server: AZQT001.xiba1.xyz, port: 20730, type: trojan, password: 93768960-75fc-34e5-8025-7ff0cc5a0aa6, sni: AZQT001.xiba1.xyz, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-789.9KB/s(Youtube:不良林), server: AZQT001.xiba1.xyz, port: 20739, type: trojan, password: 93768960-75fc-34e5-8025-7ff0cc5a0aa6, sni: AZQT001.xiba1.xyz, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-539.3KB/s(Youtube:不良林), server: AZQT001.xiba1.xyz, port: 20735, type: trojan, password: 93768960-75fc-34e5-8025-7ff0cc5a0aa6, sni: AZQT001.xiba1.xyz, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-828.0KB/s(Youtube:不良林), server: AZQT001.xiba1.xyz, port: 20728, type: trojan, password: 93768960-75fc-34e5-8025-7ff0cc5a0aa6, sni: AZQT001.xiba1.xyz, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-409.2KB/s(Youtube:不良林), server: AZQT001.xiba1.xyz, port: 20748, type: trojan, password: 93768960-75fc-34e5-8025-7ff0cc5a0aa6, sni: AZQT001.xiba1.xyz, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-2.28MB/s(Youtube:不良林), server: app.ssfree.ru, port: 443, type: vmess, uuid: 773c2bba-eb96-11ec-8260-000017022008, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /getweather, ws-headers: {Host: app.ssfree.ru}}
+  - {name: 🇩🇪 德国-1.37MB/s(Youtube:不良林), server: s4.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s4.hazz.win, skip-cert-verify: true}
+  - {name: 🇭🇰 香港-172.6KB/s(Youtube:不良林), server: azgy001.xiba1.xyz, port: 6004, type: trojan, password: 93768960-75fc-34e5-8025-7ff0cc5a0aa6, sni: azgy001.xiba1.xyz, skip-cert-verify: true}
+  - {name: 🇭🇰 香港-975.6KB/s(Youtube:不良林), server: azgy001.xiba1.xyz, port: 20714, type: trojan, password: 93768960-75fc-34e5-8025-7ff0cc5a0aa6, sni: azgy001.xiba1.xyz, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-1.05MB/s(Youtube:不良林), server: 116.129.254.212, port: 48606, type: ssr, cipher: aes-256-cfb, password: GjRQkK, protocol: auth_aes128_sha1, obfs: http_simple, protocol-param: 1062:tLkKEk, obfs-param: ""}
+  - {name: 🇺🇸 美国-3.47MB/s(Youtube:不良林), server: 212.81.47.18, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-2.45MB/s(Youtube:不良林), server: 212.81.47.15, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-710.4KB/s(Youtube:不良林), server: 167.88.61.2, port: 803, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇺🇸 美国-674.0KB/s(Youtube:不良林), server: AZQT001.xiba1.xyz, port: 20734, type: trojan, password: 93768960-75fc-34e5-8025-7ff0cc5a0aa6, sni: AZQT001.xiba1.xyz, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-247.3KB/s(Youtube:不良林), server: AZQT001.xiba1.xyz, port: 20729, type: trojan, password: 93768960-75fc-34e5-8025-7ff0cc5a0aa6, sni: AZQT001.xiba1.xyz, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-440.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.87MB/s(Youtube:不良林)
-      - 🇭🇰 香港-9.63MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.39MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.14MB/s(Youtube:不良林)
-      - 🇺🇸 美国-434.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-789.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-539.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-828.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-409.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.28MB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.37MB/s(Youtube:不良林)
+      - 🇭🇰 香港-172.6KB/s(Youtube:不良林)
+      - 🇭🇰 香港-975.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.05MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.47MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.45MB/s(Youtube:不良林)
+      - 🇺🇸 美国-710.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-674.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-247.3KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-440.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.87MB/s(Youtube:不良林)
-      - 🇭🇰 香港-9.63MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.39MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.14MB/s(Youtube:不良林)
-      - 🇺🇸 美国-434.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-789.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-539.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-828.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-409.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.28MB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.37MB/s(Youtube:不良林)
+      - 🇭🇰 香港-172.6KB/s(Youtube:不良林)
+      - 🇭🇰 香港-975.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.05MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.47MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.45MB/s(Youtube:不良林)
+      - 🇺🇸 美国-710.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-674.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-247.3KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-440.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.87MB/s(Youtube:不良林)
-      - 🇭🇰 香港-9.63MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.39MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.14MB/s(Youtube:不良林)
-      - 🇺🇸 美国-434.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-789.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-539.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-828.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-409.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.28MB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.37MB/s(Youtube:不良林)
+      - 🇭🇰 香港-172.6KB/s(Youtube:不良林)
+      - 🇭🇰 香港-975.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.05MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.47MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.45MB/s(Youtube:不良林)
+      - 🇺🇸 美国-710.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-674.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-247.3KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
-      - 🇭🇰 香港-9.63MB/s(Youtube:不良林)
+      - 🇭🇰 香港-172.6KB/s(Youtube:不良林)
+      - 🇭🇰 香港-975.6KB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-440.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.87MB/s(Youtube:不良林)
-      - 🇭🇰 香港-9.63MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.39MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.14MB/s(Youtube:不良林)
-      - 🇺🇸 美国-434.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-789.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-539.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-828.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-409.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.28MB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.37MB/s(Youtube:不良林)
+      - 🇭🇰 香港-172.6KB/s(Youtube:不良林)
+      - 🇭🇰 香港-975.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.05MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.47MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.45MB/s(Youtube:不良林)
+      - 🇺🇸 美国-710.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-674.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-247.3KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-440.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.87MB/s(Youtube:不良林)
-      - 🇭🇰 香港-9.63MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.39MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.14MB/s(Youtube:不良林)
-      - 🇺🇸 美国-434.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-789.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-539.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-828.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-409.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.28MB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.37MB/s(Youtube:不良林)
+      - 🇭🇰 香港-172.6KB/s(Youtube:不良林)
+      - 🇭🇰 香港-975.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.05MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.47MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.45MB/s(Youtube:不良林)
+      - 🇺🇸 美国-710.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-674.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-247.3KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-440.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.87MB/s(Youtube:不良林)
-      - 🇭🇰 香港-9.63MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.39MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.14MB/s(Youtube:不良林)
-      - 🇺🇸 美国-434.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-789.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-539.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-828.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-409.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.28MB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.37MB/s(Youtube:不良林)
+      - 🇭🇰 香港-172.6KB/s(Youtube:不良林)
+      - 🇭🇰 香港-975.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.05MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.47MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.45MB/s(Youtube:不良林)
+      - 🇺🇸 美国-710.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-674.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-247.3KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -129,16 +130,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-440.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.87MB/s(Youtube:不良林)
-      - 🇭🇰 香港-9.63MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.39MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.14MB/s(Youtube:不良林)
-      - 🇺🇸 美国-434.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-789.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-539.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-828.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-409.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.28MB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.37MB/s(Youtube:不良林)
+      - 🇭🇰 香港-172.6KB/s(Youtube:不良林)
+      - 🇭🇰 香港-975.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.05MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.47MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.45MB/s(Youtube:不良林)
+      - 🇺🇸 美国-710.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-674.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-247.3KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
