--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,114 +5,115 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
+  - {name: 🇭🇰 香港-223.5KB/s(Youtube:不良林), server: azgy001.xiba1.xyz, port: 20711, type: trojan, password: 93768960-75fc-34e5-8025-7ff0cc5a0aa6, sni: azgy001.xiba1.xyz, skip-cert-verify: true}
   - {name: 🇨🇳 中国-327.7KB/s(Youtube:不良林), server: 180.163.62.91, port: 10064, type: ss, cipher: aes-128-cfb, password: QazEdcTgb159@$*}
   - {name: 🇺🇸 美国-8.08MB/s(Youtube:不良林), server: transit1.fanqiang.eu, port: 15004, type: trojan, password: 7259391b-9f01-4ede-90dc-3955cf1c4998, sni: transit1.fanqiang.eu, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-9.05MB/s(Youtube:不良林), server: s1.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s1.hazz.win, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-427.1KB/s(Youtube:不良林), server: 120.241.236.93, port: 34955, type: trojan, password: 7cb64c49-2ce5-4fa6-9b79-9c02eb54735c, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-279.7KB/s(Youtube:不良林), server: AZQT001.xiba1.xyz, port: 20732, type: trojan, password: 93768960-75fc-34e5-8025-7ff0cc5a0aa6, sni: AZQT001.xiba1.xyz, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-370.2KB/s(Youtube:不良林), server: au2-1.nigirocloud.com, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, sni: au2-1.nigirocloud.com, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-252.4KB/s(Youtube:不良林), server: ingress-i1.onebox6.org, port: 38201, type: vmess, uuid: 79386685-16da-327c-9e14-aa6d702d86bc, alterId: 1, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: ingress-i1.onebox6.org}}
   - {name: 🇺🇸 美国-2.56MB/s(Youtube:不良林), server: s3.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s3.hazz.win, skip-cert-verify: true}
-  - {name: 🇬🇧 英国-484.4KB/s(Youtube:不良林), server: 88.150.137.201, port: 1021, type: ssr, cipher: aes-128-ctr, password: sEscPBiAD9K$&@79, protocol: auth_aes128_md5, obfs: tls1.2_ticket_auth, protocol-param: "", obfs-param: ""}
-  - {name: 🇷🇺 俄罗斯联邦-417.2KB/s(Youtube:不良林), server: 331tw.fans8.xyz, port: 80, type: vmess, uuid: 7f4ff2e1c08f35bdafe74a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 331tw.fans8.xyz}}
+  - {name: 未知国家-1.48MB/s(Youtube:不良林), server: 193.178.210.29, port: 443, type: trojan, password: iKR3Ft, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-270.6KB/s(Youtube:不良林), server: AZQT001.xiba1.xyz, port: 20747, type: trojan, password: 93768960-75fc-34e5-8025-7ff0cc5a0aa6, sni: AZQT001.xiba1.xyz, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-718.4KB/s(Youtube:不良林), server: AZQT001.xiba1.xyz, port: 20736, type: trojan, password: 93768960-75fc-34e5-8025-7ff0cc5a0aa6, sni: AZQT001.xiba1.xyz, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-1.42MB/s(Youtube:不良林), server: 212.81.47.13, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-955.0KB/s(Youtube:不良林), server: 116.129.254.212, port: 48616, type: ssr, cipher: aes-256-cfb, password: GjRQkK, protocol: auth_aes128_sha1, obfs: http_simple, protocol-param: 1062:tLkKEk, obfs-param: ""}
+  - {name: 🇺🇸 美国-1.46MB/s(Youtube:不良林), server: 212.81.47.18, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
+      - 🇭🇰 香港-223.5KB/s(Youtube:不良林)
       - 🇨🇳 中国-327.7KB/s(Youtube:不良林)
       - 🇺🇸 美国-8.08MB/s(Youtube:不良林)
-      - 🇺🇸 美国-9.05MB/s(Youtube:不良林)
-      - 🇨🇳 中国-427.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-279.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-370.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-252.4KB/s(Youtube:不良林)
       - 🇺🇸 美国-2.56MB/s(Youtube:不良林)
-      - 🇬🇧 英国-484.4KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-417.2KB/s(Youtube:不良林)
+      - 未知国家-1.48MB/s(Youtube:不良林)
+      - 🇺🇸 美国-270.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-718.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.42MB/s(Youtube:不良林)
+      - 🇨🇳 中国-955.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.46MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
+      - 🇭🇰 香港-223.5KB/s(Youtube:不良林)
       - 🇨🇳 中国-327.7KB/s(Youtube:不良林)
       - 🇺🇸 美国-8.08MB/s(Youtube:不良林)
-      - 🇺🇸 美国-9.05MB/s(Youtube:不良林)
-      - 🇨🇳 中国-427.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-279.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-370.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-252.4KB/s(Youtube:不良林)
       - 🇺🇸 美国-2.56MB/s(Youtube:不良林)
-      - 🇬🇧 英国-484.4KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-417.2KB/s(Youtube:不良林)
+      - 未知国家-1.48MB/s(Youtube:不良林)
+      - 🇺🇸 美国-270.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-718.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.42MB/s(Youtube:不良林)
+      - 🇨🇳 中国-955.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.46MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
+      - 🇭🇰 香港-223.5KB/s(Youtube:不良林)
       - 🇨🇳 中国-327.7KB/s(Youtube:不良林)
       - 🇺🇸 美国-8.08MB/s(Youtube:不良林)
-      - 🇺🇸 美国-9.05MB/s(Youtube:不良林)
-      - 🇨🇳 中国-427.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-279.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-370.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-252.4KB/s(Youtube:不良林)
       - 🇺🇸 美国-2.56MB/s(Youtube:不良林)
-      - 🇬🇧 英国-484.4KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-417.2KB/s(Youtube:不良林)
+      - 未知国家-1.48MB/s(Youtube:不良林)
+      - 🇺🇸 美国-270.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-718.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.42MB/s(Youtube:不良林)
+      - 🇨🇳 中国-955.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.46MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
+      - 🇭🇰 香港-223.5KB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
+      - 🇭🇰 香港-223.5KB/s(Youtube:不良林)
       - 🇨🇳 中国-327.7KB/s(Youtube:不良林)
       - 🇺🇸 美国-8.08MB/s(Youtube:不良林)
-      - 🇺🇸 美国-9.05MB/s(Youtube:不良林)
-      - 🇨🇳 中国-427.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-279.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-370.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-252.4KB/s(Youtube:不良林)
       - 🇺🇸 美国-2.56MB/s(Youtube:不良林)
-      - 🇬🇧 英国-484.4KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-417.2KB/s(Youtube:不良林)
+      - 未知国家-1.48MB/s(Youtube:不良林)
+      - 🇺🇸 美国-270.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-718.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.42MB/s(Youtube:不良林)
+      - 🇨🇳 中国-955.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.46MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
+      - 🇭🇰 香港-223.5KB/s(Youtube:不良林)
       - 🇨🇳 中国-327.7KB/s(Youtube:不良林)
       - 🇺🇸 美国-8.08MB/s(Youtube:不良林)
-      - 🇺🇸 美国-9.05MB/s(Youtube:不良林)
-      - 🇨🇳 中国-427.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-279.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-370.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-252.4KB/s(Youtube:不良林)
       - 🇺🇸 美国-2.56MB/s(Youtube:不良林)
-      - 🇬🇧 英国-484.4KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-417.2KB/s(Youtube:不良林)
+      - 未知国家-1.48MB/s(Youtube:不良林)
+      - 🇺🇸 美国-270.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-718.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.42MB/s(Youtube:不良林)
+      - 🇨🇳 中国-955.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.46MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
+      - 🇭🇰 香港-223.5KB/s(Youtube:不良林)
       - 🇨🇳 中国-327.7KB/s(Youtube:不良林)
       - 🇺🇸 美国-8.08MB/s(Youtube:不良林)
-      - 🇺🇸 美国-9.05MB/s(Youtube:不良林)
-      - 🇨🇳 中国-427.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-279.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-370.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-252.4KB/s(Youtube:不良林)
       - 🇺🇸 美国-2.56MB/s(Youtube:不良林)
-      - 🇬🇧 英国-484.4KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-417.2KB/s(Youtube:不良林)
+      - 未知国家-1.48MB/s(Youtube:不良林)
+      - 🇺🇸 美国-270.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-718.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.42MB/s(Youtube:不良林)
+      - 🇨🇳 中国-955.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.46MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +129,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
+      - 🇭🇰 香港-223.5KB/s(Youtube:不良林)
       - 🇨🇳 中国-327.7KB/s(Youtube:不良林)
       - 🇺🇸 美国-8.08MB/s(Youtube:不良林)
-      - 🇺🇸 美国-9.05MB/s(Youtube:不良林)
-      - 🇨🇳 中国-427.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-279.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-370.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-252.4KB/s(Youtube:不良林)
       - 🇺🇸 美国-2.56MB/s(Youtube:不良林)
-      - 🇬🇧 英国-484.4KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-417.2KB/s(Youtube:不良林)
+      - 未知国家-1.48MB/s(Youtube:不良林)
+      - 🇺🇸 美国-270.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-718.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.42MB/s(Youtube:不良林)
+      - 🇨🇳 中国-955.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.46MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
